<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_NewToRasaXe" />

    <Button
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/button_register" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_AlreadyAnAccount" />

    <Button
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:text="@string/button_signin"
        android:onClick="topageSign" />
        
        
</LinearLayout>