<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_username"
        android:inputType="text|textEmailAddress" />
    
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:text="@string/button_signin"
        android:onClick="sendSignIn" />
        
</LinearLayout>