<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/register_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_password"
        android:layout_alignLeft="@+id/register_password"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="@string/register_username"
        android:inputType="text|textEmailAddress" />
    
        <EditText
            android:id="@+id/register_password_repeat"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_alignLeft="@+id/button2"
            android:layout_marginBottom="54dp"
            android:ems="10"
            android:hint="@string/register_password_repeat"
            android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="147dp"
        android:onClick="sendSignUp"
        android:text="@string/button_signup" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_password_repeat"
        android:layout_alignLeft="@+id/register_password_repeat"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

</RelativeLayout>