<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chat_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/chat_with"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/toET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_recipient"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listMessages"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="horizontal" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/chatET"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/type_to_compose"
            android:scrollHorizontally="true" >
        </EditText>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/Send"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>